--- a/src/style.css
+++ b/src/style.css
@@ -168,7 +168,7 @@ iframe.no-hover {
 
 iframe {
   pointer-events: none;
-  position:absolute
+  position: absolute;
 }
 
 @media only screen and (min-width: 768px) {
